ejerciciobasico/3servicio.yml
apiVersion: v1
kind: Service
metadata:
  name: hola-servi
  namespace: prueba
spec:
  selector:
    app: hola
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
